# tf2rust

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tox.ini
tests/: test_integration.py
tf2rust/: __main__.py  constants.py  main.py  pyproject.toml  requirements.txt
tf2rust/nodes/: activationNode.py  batchNormalizationNode.py  concatenateNode.py  conv1dNode.py  denseNode.py  dropoutNode.py  embeddingNode.py  flattenNode.py  globalAveragePooling1dNode.py  inputLayerNode.py  maxPooling1dNode.py  multiplyNode.py  node.py  reshapeNode.py  tensorFlowAdd2Node.py  tensorFlowMeanNode.py  thresholdedrelu.py
tf2rust/tests/: test_integration.py
tf2rust/utils/: model_saver.py  rust_converter.py  scoring_metrics.py
tf2rust/utils/surgeon/: identify.py  operations.py  surgeon.py  utils.py
