[project]
name = "tf2rust"
dependencies = [
    "argparse==1.4",
    "numpy==1.24.3",
    "pydot==1.4.2",
    "scikit-learn==1.1.3",
    "tensorflow==2.13.0",
]

[tool.poetry]
name = "tf2rust"
version = "0.4.0"
description = ""
authors = ["DSCI OSS <dsci_oss@crowdstrike.com>"]

# This is a bit unfortunate but with this setup the dependencies need to be
# duplicated in project.dependencies above. The dependencies above are included
# in the resulting wheel where as the ones listed here are used for development
# and testing.
[tool.poetry.dependencies]
python = ">=3.9,<3.12"
argparse = "==1.4"
numpy = "==1.24.3"
pydot = "==1.4.2"
scikit-learn = "==1.3.0"
tensorflow = "==2.13.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
pytest = "^6"
tox = "^3.28.0"
twine = "^4.0.2"

[tool.isort]
profile = "black"
